# PeopleBehindDetector

./: .gitignore  .rcfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: pylint.yml
