[tool.poetry]
name = "peoplebehinddetector"
version = "0.1.0"
description = "Detects people behind the user using neural network"
authors = ["Vladimir Lar'kin <vladimir@larkin.one>"]

[tool.poetry.dependencies]
python = "3.8.5"
streamlit = "^0.83.0"
streamlit-webrtc = "^0.22.1"
torch = "^1.9.0"
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
